# tic-tac-toe-nvim-testdrive

./: CMakeLists.txt  Makefile
headers/: Board.h  Player.h
src/: Board.cpp  Player.cpp  main.cpp
